--- a/best-computer-games/index.html
+++ b/best-computer-games/index.html
@@ -113,7 +113,7 @@
                 <div class="col-lg-8">
                     <div class="main_blog_details">
                         <img class="img-fluid" src="img/blog/news-blog.jpg" alt="">
-                        <h4>7 Outstanding Online Games</h4>
+                        <h4>7 개의 뛰어난 온라인 게임</h4>
                         <div class="user_details">
                             <div class="float-left">
                                 <a href="#">Technology</a>
@@ -121,32 +121,31 @@
                             </div>
                             </div>
                         </div>
-						<p>Bringing all of your friends together to play couch collaboration games every day can be difficult, but there are plenty of titles to keep the fun going from afar. We have reduced the herd to some of the best games of all genres: ninja brawlers in the squad, team-oriented zombie hunters who are not Left4Dead, pixelated farming simulators, the list goes on.</p>
-						<p>Browser games are nothing more than the typical computer or console games. They are usually very simple and easy to get around. You can pick them up and get started right away. You don't have to install, patch, or meet the crazy system requirements to play.</p>
-						<p>These games used to be much more popular and even had large communities, but they were overshadowed by the advancement of technology. It's true, browser games will never match PC games in terms of graphics or beauty, but they're still very entertaining and engaging.</p>
-						<h2>7 BEST BROWSER GAMES</h2>
-						<p>Are you ready to start playing? Let’s go!</p>
+						<p>매일 소파 협업 게임을하기 위해 모든 친구를 모으는 것은 어려울 수 있지만, 재미를 멀리하는 데 도움이되는 타이틀이 많이 있습니다. 우리는 모든 장르의 최고의 게임으로 무리를 줄였습니다 : 분대의 닌자 싸움꾼, Left4Dead가 아닌 팀 중심의 좀비 사냥꾼, 픽셀 화 된 농업 시뮬레이터, 목록이 계속됩니다.</p>
+						<p>브라우저 게임은 일반적인 컴퓨터 또는 콘솔 게임에 지나지 않습니다. 그들은 일반적으로 매우 간단하고 돌아 다니기 쉽습니다. 당신은 그들을 데리러 바로 시작할 수 있습니다. 게임을하기 위해 미친 시스템 요구 사항을 설치, 패치 또는 충족시킬 필요가 없습니다.</p>
+						<p>이 게임은 훨씬 더 대중적이었고 심지어 커뮤니티가 많았지 만 기술의 발전으로 인해 그림자가되었습니다. 사실, 브라우저 게임은 그래픽이나 아름다움 측면에서 PC 게임과 절대 일치하지는 않지만 여전히 매우 흥미롭고 매력적입니다.</p>
+						<h2>7 개의 최고의 브라우저 게임</h2>
+						<p>게임을 시작할 준비가 되셨습니까? 가자!</p>
 						<h3>1. Absolver</h3>
-						<p>Absolver is a meditative martial arts experience that teaches you how to make friends by punching. You can team up with a friend or two to conquer the game's small open world and bonus dungeons, all of which encourage teamwork. And if you don't have friends to play with, you can meet other players in the open world and try to make spontaneous friendships with simple in-game gestures. Absolver is about communicating as much as fighting, and that makes it a cooperative adventure brawler like no other.</p>
+						<p>Absolver는 펀칭으로 친구를 사귀는 법을 가르쳐주는 명상적인 무술 경험입니다. 친구 한두 명과 팀을 이루어 게임의 작은 오픈 월드와 보너스 던전을 정복 할 수 있습니다. 그리고 친구가 없으면 오픈 월드에서 다른 플레이어를 만나고 간단한 게임 내 제스처로 자발적인 우정을 쌓을 수 있습니다. Absolver는 전투만큼이나 의사 소통을하는 것에 관한 것이며, 그것은 다른 어느 누구보다도 협동 모험 모험가입니다.</p>
 						<h3>2. Abobo’s big adventure</h3>
-						<p>Abobo's Big Adventure is a relapse to the Nintendo Entertainment System in its best 8-bit era. You play as Abobo, a muscle man whose son has been kidnapped. Obviously, you have to destroy the chaos and make your way through hordes of enemies to save it.</p>
-						<p>You will encounter many bosses and will have to adapt your playstyle to beat the obstacles. If you like old-school fighting games, you should check this game out. Do it fast because Aboboy is waiting to be rescued (that’s the name of his son)!</p>
-						<img src="./img/abobo.jpg" style="max-width: 100%; height: auto;">
+						<p>Abobo의 Big Adventure는 최고의 8 비트 시대에 닌텐도 엔터테인먼트 시스템으로 다시 돌아 왔습니다. 당신은 아들이 납치 된 근육맨 인 아 보보로 플레이합니다. 분명히, 당신은 혼란을 파괴하고 그것을 저장하기 위해 적의 무리를 통해 길을 만들어야합니다.</p>
+						<p>당신은 많은 보스를 만나고 장애물을 극복하기 위해 당신의 플레이 스타일을 조정해야합니다. 구식 격투 게임을 좋아한다면이 게임을 확인해야합니다. 아보 보이 (Aboboy)가 구조되기를 기다리고 있기 때문에 빨리하십시오 (그의 아들의 이름입니다)!</p>
 						<h3>3. Town of salem</h3>
-						<p>Town of Salem is similar to the role-playing game Mafia, which is a lot of fun at parties. There are different roles, each with different skills. There are the good (city dwellers), the bad (mafia) and the neutral.</p>
-						<p>The good need to find out who the Mafia members are and to prevent them from killing all townspeople. The night phase is when the mafia strikes and you should act strategically. This game is not easy to explain. Instead, it is best to understand after trying it out.</p>
+						<p>Town of Salem은 롤 플레잉 게임 Mafia와 유사하며 파티에서 많은 재미를 느낍니다. 각기 다른 기술을 가진 다른 역할이 있습니다. 선 (도시 거주자), 선 (마피아) 및 중립이 있습니다.</p>
+						<p>마피아 회원이 누구인지 알아 내고 모든 마을 사람들을 죽이지 않도록해야합니다. 밤 단계는 마피아가 때리고 전략적으로 행동해야합니다. 이 게임은 설명하기 쉽지 않습니다. 대신 시도한 후에 이해하는 것이 가장 좋습니다.</p>
 						<h3>4. Monster Hunter: World</h3>
-						<p>The premise of Monster Hunter: World is straightforward: Hunt monsters, acquire new armor and weaponry, then hunt even more dangerous monsters. It mixes the simple pleasures of discovering gorgeously designed biomes and creatures with the thrill of taking on big, borderline-insurmountable bosses with a team. Somehow, it manages to make its grinding-for-the-sake-of-grinding progression system far more enjoyable than you might imagine.</p>
+						<p>몬스터 헌터 : 월드의 전제는 간단합니다. 몬스터를 사냥하고 새로운 갑옷과 무기를 획득 한 다음 더 위험한 몬스터를 사냥하십시오. 화려하게 디자인 된 생물 군계와 생물을 발견하는 단순한 즐거움과 팀과 함께 경계선을 넘을 수없는 큰 보스를 치는 스릴을 혼합합니다. 어쨌든, 그것은 그라인딩을위한 연삭 진행 시스템을 당신이 상상하는 것보다 훨씬 더 즐겁게 만들어줍니다.</p>
 						<h3>5. Stardew Valley</h3>
-						<p>Stardew Valley's online co-op adds nothing to the classic Harvest Moon formula other than additional players, but this one addition means everything. All the fun of farming, building relationships with villagers, and engaging in good old-fashioned agricultural capitalism is doubled, tripled, and quadrupled with up to three other players. And as we all know, there is nothing that helps sow the seeds of friendship than working together.</p>
+						<p>Stardew Valley의 온라인 협동은 추가 플레이어 외에 고전적인 Harvest Moon 공식에 아무것도 추가하지 않지만이 추가는 모든 것을 의미합니다. 농업의 재미, 마을 사람들과의 관계 구축, 좋은 구식 농업 자본주의에 참여하는 것은 최대 3 명의 다른 플레이어들과 함께 2 배, 3 배, 4 배가됩니다. 그리고 우리 모두가 알듯이, 협력하는 것보다 우정의 씨앗을 뿌리는 데 도움이되는 것은 없습니다.</p>
 						<h3>6. Threes</h3>
-						<p>Threes is something you should definitely check out if you played 2048. This actually came before. What you need to do is combine the number of tiles before filling up the board to get as many as possible.</p>
-						<p>There are some rules that add complexity, e.g. B. Combine 1s only with 2s, 3s or higher can only be combined with the same tiles, and so on. As always, you will understand better when you start playing.</p>
+						<p>Threes는 2048을했는지 확인해야 할 부분입니다. 당신이해야 할 일은 가능한 한 많은 보드를 채우기 전에 타일 수를 결합하는 것입니다.</p>
+						<p>복잡성을 추가하는 규칙이 있습니다 (예 : B. 1과 2, 3 또는 그 이상 만 결합하면 같은 타일과 만 결합 할 수 있습니다. 언제나 그렇듯이 연주를 시작할 때 더 잘 이해할 수 있습니다.</p>
 						<h3>7. Missile Game</h3>
-						<p>Rocket game is a very simple game that can hang players on their seats. This game uses a minimalist black and white theme. However, the entertainment provided by this game is not minimal. The rocket game is fascinating and challenging. In this game, the player plays the role of passing a rocket through a tunnel.</p>
-						<h2>GAME TIME</h2>
-						<p>Whether you’re a casual gamer or the no-lifer type, playing browser games once in a while can be really fun. You can play some with your friends and rub your skill in their faces or play alone to relax after a hard day’s work.</p>
-						<p>What are your favorite browser games not included in this list? Tell us about your favorites! </p>
+						<p>로켓 게임은 플레이어를 좌석에 매달 수있는 매우 간단한 게임입니다. 이 게임은 미니멀리스트 흑백 테마를 사용합니다. 그러나이 게임에서 제공하는 엔터테인먼트는 최소가 아닙니다. 로켓 게임은 흥미롭고 도전적입니다. 이 게임에서 플레이어는 로켓을 터널을 통과시키는 역할을합니다.</p>
+						<h2>게임 시간</h2>
+						<p>평범한 게이머 이건 아니건간에 브라우저 게임을 한 번에하는 것은 정말 재미있을 수 있습니다. 힘든 하루 일과를 마치고 친구들과 놀거나 얼굴에 기술을 바르거나 혼자서 휴식을 취할 수 있습니다.</p>
+						<p>이 목록에 포함되지 않은 즐겨 찾는 브라우저 게임은 무엇입니까? 즐겨 찾기에 대해 알려주세요</p>
                         </div>
                     </div>
                 </div>
