--- a/best-computer-games/index.html
+++ b/best-computer-games/index.html
@@ -67,7 +67,6 @@
                         </li>
                         <li class="menu-has-children"><a href="">Blog</a>
                             <ul>
-                                <li><a href="#">Category: Lifestyle</a></li>
                             </ul>
                         </li>
                         <li><a href="#">Contact</a></li>
@@ -95,11 +94,11 @@
             <div class="row d-flex align-items-center justify-content-center">
                 <div class="about-content col-lg-12">
                     <h1 class="text-white">
-                        Category: Lifestyle
+                        Category: Tech
                     </h1>
                     <p class="text-white link-nav"><a href="#">Home </a> <span class="lnr lnr-arrow-right"></span>
                         <a href="#"> Blog</a> <span class="lnr lnr-arrow-right"></span>
-                        <a href="#"> Category: Lifestyle</a></p>
+                        <a href="#"> Category: Tech</a></p>
                 </div>
             </div>
         </div>
