--- a/best-computer-games/index.html
+++ b/best-computer-games/index.html
@@ -67,6 +67,7 @@
                         </li>
                         <li class="menu-has-children"><a href="">Blog</a>
                             <ul>
+                                <li><a href="#">Category: Tech</a></li>
                             </ul>
                         </li>
                         <li><a href="#">Contact</a></li>
